--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -97,6 +97,7 @@ pages:
       - Create tags: Plugins/Your_own_plugin/Create_tags.md
   - JavaScript:
     - Introduction: JavaScript/Introduction.md
+    - Minifiers: JavaScript/Minifiers.md
   - Internals:
     - Limits: Internals/Limits.md
     - PHP renderer: Internals/PHP_renderer.md
