Updated composer.json [ci skip]

--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,11 @@
 		"lib-pcre":   ">=7.2"
 	},
 	"suggest": {
+		"ext-curl":      "Improves the performance of the MediaEmbed plugin and some JavaScript minifiers",
 		"ext-intl":      "Allows international URLs to be accepted by the URL filter",
 		"ext-json":      "Enables the generation of a JavaScript parser",
-		"ext-mbstring":  "Enables some optimizations in the PHP renderer",
-		"ext-tokenizer": "Enables optimizations in the PHP renderer",
+		"ext-mbstring":  "Improves the performance of the PHP renderer",
+		"ext-tokenizer": "Improves the performance of the PHP renderer",
 		"ext-xsl":       "Enables the XSLT renderer",
 		"ext-zlib":      "Enables gzip compression when scraping content via the MediaEmbed plugin"
 	},
