--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ matrix:
       env: OPTIMIZE=1
     - php: 7.0
       env: OPTIMIZE=1
+    - php: 7.1
+      env: OPTIMIZE=1
     - php: hhvm
       env: OPTIMIZE=1
 branches:
