Updated Travis config to temporarily allow PHP 7.1 to fail

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ matrix:
       env: OPTIMIZE=1
     - php: hhvm
       env: OPTIMIZE=1
+  allow_failures:
+    - php: 7.1
 branches:
   except:
     - /^dist/
