Tag: setSortPriority() has been deprecated and will emit a warning
A tag's priority can be set at the time of its creation. See docs/Internals/API_changes.md or http://s9etextformatter.readthedocs.io/Internals/API_changes/#070

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -99,5 +99,6 @@ pages:
     - Introduction: JavaScript/Introduction.md
     - Minifiers: JavaScript/Minifiers.md
   - Internals:
+    - API changes: Internals/API_changes.md
     - Limits: Internals/Limits.md
     - PHP renderer: Internals/PHP_renderer.md
