--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -92,6 +92,9 @@ pages:
       - Add a link to the original URL: Plugins/MediaEmbed/Append_template.md
       - Change a template: Plugins/MediaEmbed/Change_template.md
       - Configure a cache dir: Plugins/MediaEmbed/Performance_cache_dir.md
+    - PipeTables:
+      - Synopsis: Plugins/PipeTables/Synopsis.md
+      - Syntax: Plugins/PipeTables/Syntax.md
     - Preg:
       - Synopsis: Plugins/Preg/Synopsis.md
     - Your own plugin:
