--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,11 @@
 		"ext-filter": "*",
 		"lib-pcre":   ">=7.2"
 	},
+	"require-dev": {
+		"php":                   ">=5.6.0",
+		"matthiasmullie/minify": "*",
+		"s9e/regexp-builder":    ">=1.3.0"
+	},
 	"suggest": {
 		"ext-curl":      "Improves the performance of the MediaEmbed plugin and some JavaScript minifiers",
 		"ext-intl":      "Allows international URLs to be accepted by the URL filter",
@@ -25,9 +30,5 @@
 		"psr-4": {
 			"s9e\\TextFormatter\\": "src"
 		}
-	},
-	"scripts": {
-		"post-install-cmd": "php scripts/build/patchSources.php",
-		"post-update-cmd":  "php scripts/build/patchSources.php"
 	}
 }
