--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -107,3 +107,4 @@ pages:
     - API changes: Internals/API_changes.md
     - Limits: Internals/Limits.md
     - PHP renderer: Internals/PHP_renderer.md
+    - Tag priorities: Internals/Tag_priorities.md
