--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -104,6 +104,7 @@ pages:
     - Introduction: JavaScript/Introduction.md
     - Minifiers: JavaScript/Minifiers.md
   - Internals:
+    - API docs: Internals/API_docs.md
     - API changes: Internals/API_changes.md
     - Limits: Internals/Limits.md
     - PHP renderer: Internals/PHP_renderer.md
