Added PHP nightly to Travis config #ignore

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,9 @@ matrix:
       env: OPTIMIZE=1
     - php: hhvm
       env: OPTIMIZE=1
+  allow_failures:
+    - php: nightly
+      env: OPTIMIZE=1
 branches:
   except:
     - /^dist/
