Updated Travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ matrix:
       env: OPTIMIZE=1
     - php: 7.1
       env: OPTIMIZE=1
+    - php: nightly
+      env: OPTIMIZE=1
     - php: hhvm
       env: OPTIMIZE=1
   allow_failures:
