--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ matrix:
       env: COVERAGE=1
     - php: 5.3.3
       env: OPTIMIZE=1
+      dist: precise
     - php: 5.4
       env: OPTIMIZE=1
     - php: 5.5
