--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: php
 matrix:
   fast_finish: true
   include:
-    - php: 7.0
+    - php: 7.1
       env: COVERAGE=1
     - php: 5.4
     - php: 5.5
@@ -23,7 +23,7 @@ branches:
     - /^release/
 before_script:
   - ./scripts/travis/setup.sh
-  - sh -c "if [ '$TRAVIS_PHP_VERSION' != 'hhvm' ]; then php -i; fi"
+  - php -i
 script:
   - ./scripts/travis/run-tests.sh
 after_script:
