--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,10 @@
 		"lib-pcre":   ">=7.2"
 	},
 	"require-dev": {
-		"php":                   ">=5.6.0",
-		"matthiasmullie/minify": "*",
-		"s9e/regexp-builder":    ">=1.3.0"
+		"php":                         ">=5.6.0",
+		"matthiasmullie/minify":       "*",
+		"php-coveralls/php-coveralls": "*",
+		"s9e/regexp-builder":          ">=1.3.0"
 	},
 	"suggest": {
 		"ext-curl":      "Improves the performance of the MediaEmbed plugin and some JavaScript minifiers",
