--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 		"php":                         ">=5.6.0",
 		"matthiasmullie/minify":       "*",
 		"php-coveralls/php-coveralls": "*",
-		"s9e/regexp-builder":          ">=1.3.0"
+		"s9e/regexp-builder":          "1.*"
 	},
 	"suggest": {
 		"ext-curl":      "Improves the performance of the MediaEmbed plugin and some JavaScript minifiers",
