--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -87,6 +87,7 @@ pages:
       - Syntax: Plugins/Litedown/Syntax.md
     - MediaEmbed:
       - Synopsis: Plugins/MediaEmbed/Synopsis.md
+      - Using default sites: Plugins/MediaEmbed/Using_default_sites.md
       - Supported sites: Plugins/MediaEmbed/Sites.md
       - Add a custom site: Plugins/MediaEmbed/Add_custom.md
       - Add a link to the original URL: Plugins/MediaEmbed/Append_template.md
