--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ matrix:
       env: COVERAGE=1
     - php: 7.1
     - php: 7.2
-  allowed_failures:
+  allow_failures:
     - php: 7.4snapshot
 branches:
   except:
