--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -102,6 +102,8 @@ nav:
     - Preg:
       - Synopsis: Plugins/Preg/Synopsis.md
       - Practical examples: Plugins/Preg/Practical_examples.md
+    - TaskLists:
+      - Synopsis: Plugins/TaskLists/Synopsis.md
     - Your own plugin:
       - Plug your own parser: Plugins/Your_own_plugin/Register_parser.md
       - Create tags: Plugins/Your_own_plugin/Create_tags.md
