Added template manipulation via SweetDOM
https://github.com/s9e/SweetDOM#api

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
 		"ext-dom":    "*",
 		"ext-filter": "*",
 		"lib-pcre":   ">=8.13",
-		"s9e/regexp-builder": "^1.4"
+		"s9e/regexp-builder": "^1.4",
+		"s9e/sweetdom":       "^1.0"
 	},
 	"require-dev": {
 		"matthiasmullie/minify": "*",
