Added helper script [ci skip]

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "s9e/text-formatter",
 	"type": "library",
-	"description": "Multi-purpose text formatting and markup library. Plugins offer support for BBCodes, Markdown, emoticons, HTML, embedding media (YouTube, etc...), enhanced typography and more.",
+	"description": "Multi-purpose text formatting and markup library. Plugins offer support for BBCodes, Markdown, emoticons, HTML, embedding third-party media (YouTube, etc...), enhanced typography and more.",
 	"homepage": "https://github.com/s9e/TextFormatter/",
 	"keywords": ["bbcode","bbcodes","blog","censor","embed","emoji","emoticons","engine","forum","html","markdown","markup","media","parser","shortcodes"],
 	"license": "MIT",
@@ -10,13 +10,14 @@
 		"ext-dom":    "*",
 		"ext-filter": "*",
 		"lib-pcre":   ">=8.13",
+
 		"s9e/regexp-builder": "^1.4",
 		"s9e/sweetdom":       "^1.0"
 	},
 	"require-dev": {
+		"code-lts/doctum":       "*",
 		"matthiasmullie/minify": "*",
-		"phpunit/phpunit":       "*",
-		"code-lts/doctum":       "*"
+		"phpunit/phpunit":       "*"
 	},
 	"suggest": {
 		"ext-curl":      "Improves the performance of the MediaEmbed plugin and some JavaScript minifiers",
@@ -36,6 +37,9 @@
 		"psr-4": {
 			"s9e\\TextFormatter\\Tests\\": "tests"
 		}
+	},
+	"scripts": {
+		"post-update-cmd": "php scripts/patchReadme.php"
 	},
 	"extra": {
 		"version": "2.7.5-dev"
