Updated GitHub script

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,5 +34,11 @@ jobs:
     - name: Install Composer dependencies
       run: composer install --prefer-dist --no-progress
 
+    - name: Create cache dir
+      run: mkdir tests/.cache
+
+    - name: Start local web server
+      run: php -S localhost:8000 -d "always_populate_raw_post_data=-1" -t tests 2>/dev/null &
+
     - name: Run test suite
       run: composer run-script test
