--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,7 +2,9 @@ name: Tests
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - "main"
+      - "GitHubWorkflow"
   pull_request:
     branches: [ master ]
 
