--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
 	"keywords": ["bbcode","bbcodes","blog","censor","embed","emoji","emoticons","engine","forum","html","markdown","markup","media","parser","shortcodes"],
 	"license": "MIT",
 	"require": {
-		"php":        "^8.1",
+		"php":        "~8.1.22 || ~8.2.9 || ^8.3",
 		"ext-dom":    "*",
 		"ext-filter": "*",
 		"lib-pcre":   ">=8.13",
