--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,13 @@
 	"keywords": ["bbcode","bbcodes","blog","censor","embed","emoji","emoticons","engine","forum","html","markdown","markup","media","parser","shortcodes"],
 	"license": "MIT",
 	"require": {
-		"php":        "~8.1.22 || ~8.2.9 || ^8.3",
+		"php":        "^8.1.2",
 		"ext-dom":    "*",
 		"ext-filter": "*",
 		"lib-pcre":   ">=8.13",
 
 		"s9e/regexp-builder": "^1.4",
-		"s9e/sweetdom":       "^3.0"
+		"s9e/sweetdom":       "dev-Workarounds"
 	},
 	"require-dev": {
 		"code-lts/doctum":       "*",
