--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
 	"require-dev": {
 		"code-lts/doctum":       "*",
 		"matthiasmullie/minify": "*",
-		"phpunit/phpunit":       "^9.5"
+		"phpunit/phpunit":       "^9.5",
+		"friendsofphp/php-cs-fixer": "^3.52"
 	},
 	"suggest": {
 		"ext-curl":      "Improves the performance of the MediaEmbed plugin and some JavaScript minifiers",
